--- a/webapp/references.html
+++ b/webapp/references.html
@@ -10,9 +10,9 @@
     <script type="text/javascript" src="assets/includes/jquery.min.js"></script>
 
     <!-- Customization -->
-    <link rel="stylesheet" type="text/css" href="assets/includes/custom.css?v=1" />
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css" />
     <!-- IScroll Link here -->
-    <script type="text/javascript" src="/assets/includes/custom.js?v=1"></script>
+    <script type="text/javascript" src="../css/stylesheet.css"></script>
 </head>
 <body>
 
@@ -27,12 +27,12 @@
     </div>
 
     <div class="ui equal width center aligned grid">
-        <a href = "mockup-options/tap.html" class="eight wide column" id="black">Tap</a>
-        <a href = "mockup-options/accordion.html"class="eight wide blue column">Accordion</a>
-        <a href = "mockup-options/swipe_v2.html"class="eight wide olive column">Swipe</a>
-        <a href = "mockup-options/tabular.html"class="eight wide column" id="black">Tabular</a>
-        <a href = "mockup.html"class="eight wide column" id="black">Original</a>
-        <a href = "mockup.html" class="eight wide pink column">Other</a>
+        <a href = "mockup-options/tap.html" class="eight wide column" id="sec1">Tap</a>
+        <a href = "mockup-options/accordion.html"class="eight wide column" id="sec2">Accordion</a>
+        <a href = "mockup-options/swipe_v2.html"class="eight wide column" id="sec3">Swipe</a>
+        <a href = "mockup-options/tabular.html"class="eight wide column" id="sec4">Tabular</a>
+        <a href = "mockup.html"class="eight wide column" id="sec5">Original</a>
+        <a href = "mockup.html" class="eight wide column" id="sec6">Other</a>
     </div>    
 
 </body>
