--- a/webapp/index.html
+++ b/webapp/index.html
@@ -44,17 +44,17 @@
             </div>
             <a class="eight wide column" href="references.html" id="POWELL">Powell Library</a>
             <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/130515_UCLA_2472.tif">
+                <img src="../img/Statsform_Stock_Photos/130515_UCLA_2472.jpg">
             </div>
         </div>
 
         <div class="row">
             <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/DAY1_SHOT1_POWELL-93_r_cmyk.tif">
+                <img src="../img/Statsform_Stock_Photos/DAY1_SHOT1_POWELL-93_r_cmyk.jpg">
             </div>
             <a class="four wide column" href="references.html" id="AL">Arts Library</a>
             <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.tif">
+                <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
             </div>
             <a class="four wide column" href="references.html" id="ML">Music Library</a>
         </div>
