--- a/webapp/references.html
+++ b/webapp/references.html
@@ -18,7 +18,19 @@
 
     <!-- Menu -->
     <div class="ui secondary inverted menu">
-        <a class="header item" href="index.html"><i class="ui reply icon"></i>Back</a>
+        <div class="ui huge breadcrumb">
+            <div class="section" >
+                <a class="item" href="index.html">
+                    Home
+                </a>
+            </div>
+            <i class="right chevron icon divider"></i>
+            <div class="active section">
+                <a class="item">
+                    Specific Library
+                </a>
+            </div>
+        </div>
         <div class="right menu">
             <a class="item">
                 Login
@@ -26,6 +38,7 @@
         </div>
     </div>
 
+    <!-- Content -->
     <div class="ui equal width center aligned grid">
         <a href = "mockup-options/tap.html" class="eight wide column" id="sec1">Tap</a>
         <a href = "mockup-options/accordion.html"class="eight wide column" id="sec2">Accordion</a>
