--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,12 +2,12 @@
 <head>
     <title>Stats Redesign Project</title>
 
+    <!-- JQuery -->
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+
     <!-- Semantic UI -->
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
     <script src="../semantic/semantic.min.js"></script>
-
-    <!-- JQuery -->
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 
     <!-- Personally Defined CSS/Javascript -->
     <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
@@ -17,6 +17,13 @@
 
     <!-- Menu -->
     <div class="ui secondary inverted menu">
+        <div class="ui huge breadcrumb">
+            <div class="active section" >
+                <a class="item">
+                    Home
+                </a>
+            </div>
+        </div>
         <div class="right menu">
             <a class="item">
                 Login
@@ -24,10 +31,7 @@
         </div>
     </div>
 
-
-
-
-
+    <!-- Content -->
     <div class="ui equal width height center aligned grid">
         <div class="row">
             <a class="six wide column" href="references.html" id="YRL">Young Research Library</a>
@@ -39,12 +43,12 @@
         </div>
 
         <div class="row">
-            <div class="four wide column">
+            <div class="five wide column">
                 <img src="../img/Statsform_Stock_Photos/powellfront.JPG">
             </div>
             <a class="eight wide column" href="references.html" id="POWELL">Powell Library</a>
-            <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/130515_UCLA_2472.jpg">
+            <div class="three wide column">
+                <img src="../img/Statsform_Stock_Photos/UC_Los_Angeles-055.jpg">
             </div>
         </div>
 
