--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,4 +1,4 @@
-<html>
+    <html>
 <head>
     <title>Stats Redesign Project</title>
 
@@ -12,6 +12,13 @@
     <!-- Personally Defined CSS/Javascript -->
     <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
     <script src="../js/javascript.js"></script>
+
+
+<!-- Google Font Montserrat --> 
+
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">   
+
+
 </head>
 <body>
 
@@ -33,34 +40,33 @@
 
     <!-- Content -->
     <div class="ui equal width height center aligned grid">
-        <div class="row">
-            <a class="six wide column" href="references.html" id="YRL">Young Research Library</a>
+       <div class="row">
+              <a class="six wide column" href="references.html" id="YRL"> <div class="verticalalign"> YOUNG RESEARCH LIBRARY</div></a>
             <div class="four wide column">
                 <img src="../img/Statsform_Stock_Photos/powellnight.jpg">
             </div>
-            <a class="six wide column" href="references.html" id="BL">Biomedical Library</a>
-
+            <a class="six wide column" href="references.html" id="BL"> <div class="verticalalign"> BIOMEDICAL LIBRARY </div> </a>
         </div>
 
         <div class="row">
-            <div class="five wide column">
-                <img src="../img/Statsform_Stock_Photos/powellfront.JPG">
+            <div class="five wide column"> <div align="left">
+                 <img src="../img/Statsform_Stock_Photos/powellfront.JPG"></div>
             </div>
-            <a class="eight wide column" href="references.html" id="POWELL">Powell Library</a>
+            <a class="eight wide column" href="references.html" id = "POWELL"> <div class="verticalalign">POWELL LIBRARY</div></a>
             <div class="three wide column">
                 <img src="../img/Statsform_Stock_Photos/UC_Los_Angeles-055.jpg">
             </div>
-        </div>
+        </div> 
 
         <div class="row">
             <div class="four wide column">
                 <img src="../img/Statsform_Stock_Photos/DAY1_SHOT1_POWELL-93_r_cmyk.jpg">
             </div>
-            <a class="four wide column" href="references.html" id="AL">Arts Library</a>
+            <a class="four wide column" href="references.html" id="AL"><div class="verticalalign"> ARTS LIBRARY</div></a>
             <div class="four wide column">
                 <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
             </div>
-            <a class="four wide column" href="references.html" id="ML">Music Library</a>
+            <a class="four wide column" href="references.html" id="ML"><div class="verticalalign">MUSIC LIBRARY</div></a>
         </div>
     </div>      
 
