--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,74 +1,74 @@
     <html>
-<head>
-    <title>Stats Redesign Project</title>
+    <head>
+        <title>Stats Redesign Project</title>
 
-    <!-- JQuery -->
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+        <!-- JQuery -->
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 
-    <!-- Semantic UI -->
-    <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
-    <script src="../semantic/semantic.min.js"></script>
+        <!-- Semantic UI -->
+        <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
+        <script src="../semantic/semantic.min.js"></script>
 
-    <!-- Personally Defined CSS/Javascript -->
-    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-    <script src="../js/javascript.js"></script>
-
-
-<!-- Google Font Montserrat --> 
-
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">   
+        <!-- Personally Defined CSS/Javascript -->
+        <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+        <script src="../js/javascript.js"></script>
 
 
-</head>
-<body>
+        <!-- Google Font Montserrat --> 
 
-    <!-- Menu -->
-    <div class="ui secondary inverted menu">
-        <div class="ui huge breadcrumb">
-            <div class="active section" >
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">   
+
+
+    </head>
+    <body>
+
+        <!-- Menu -->
+        <div class="ui secondary inverted menu">
+            <div class="ui huge breadcrumb">
+                <div class="active section" >
+                    <a class="item">
+                        Home
+                    </a>
+                </div>
+            </div>
+            <div class="right menu">
                 <a class="item">
-                    Home
+                    Login
                 </a>
             </div>
         </div>
-        <div class="right menu">
-            <a class="item">
-                Login
-            </a>
+
+        <!-- Content -->
+        <div class="ui equal width height center aligned grid">
+         <div class="row">
+          <a class="six wide column" href="references.html" id="YRL"> <div class="verticalalign"> YOUNG RESEARCH LIBRARY</div></a>
+          <div class="four wide column">
+            <img src="../img/Statsform_Stock_Photos/powellnight.jpg">
         </div>
+        <a class="six wide column" href="references.html" id="BL"> <div class="verticalalign"> BIOMEDICAL LIBRARY </div> </a>
     </div>
 
-    <!-- Content -->
-    <div class="ui equal width height center aligned grid">
-       <div class="row">
-              <a class="six wide column" href="references.html" id="YRL"> <div class="verticalalign"> YOUNG RESEARCH LIBRARY</div></a>
-            <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/powellnight.jpg">
-            </div>
-            <a class="six wide column" href="references.html" id="BL"> <div class="verticalalign"> BIOMEDICAL LIBRARY </div> </a>
-        </div>
+    <div class="row">
+        <div class="five wide column"> <div align="left">
+           <img src="../img/Statsform_Stock_Photos/PowelLibrary.jpg"></div>
+       </div>
+       <a class="eight wide column" href="references.html" id = "POWELL"> <div class="verticalalign">POWELL LIBRARY</div></a> 
+       <div class="three wide column">
+        <img src="../img/Statsform_Stock_Photos/UC_Los_Angeles-055.jpg"></div>
+    </div>
 
-        <div class="row">
-            <div class="five wide column"> <div align="left">
-                 <img src="../img/Statsform_Stock_Photos/powellfront.JPG"></div>
-            </div>
-            <a class="eight wide column" href="references.html" id = "POWELL"> <div class="verticalalign">POWELL LIBRARY</div></a>
-            <div class="three wide column">
-                <img src="../img/Statsform_Stock_Photos/UC_Los_Angeles-055.jpg">
-            </div>
-        </div> 
 
-        <div class="row">
-            <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/DAY1_SHOT1_POWELL-93_r_cmyk.jpg">
-            </div>
-            <a class="four wide column" href="references.html" id="AL"><div class="verticalalign"> ARTS LIBRARY</div></a>
-            <div class="four wide column">
-                <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
-            </div>
-            <a class="four wide column" href="references.html" id="ML"><div class="verticalalign">MUSIC LIBRARY</div></a>
+    <div class="row">
+        <div class="four wide column">
+            <img src="../img/Statsform_Stock_Photos/bruinbear.jpg">
         </div>
-    </div>      
+        <a class="four wide column" href="references.html" id="AL"><div class="verticalalign"> ARTS LIBRARY</div></a>
+        <div class="four wide column">
+            <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
+        </div>
+        <a class="four wide column" href="references.html" id="ML"><div class="verticalalign">MUSIC LIBRARY</div></a>
+    </div>
+</div>      
 
 
 <!-- 
