--- a/webapp/references.html
+++ b/webapp/references.html
@@ -40,12 +40,12 @@
 
     <!-- Content -->
     <div class="ui equal width center aligned grid">
-        <a href = "mockup-options/tap.html" class="eight wide column" id="sec1">Tap</a>
-        <a href = "mockup-options/accordion.html"class="eight wide column" id="sec2">Accordion</a>
-        <a href = "mockup-options/swipe_v2.html"class="eight wide column" id="sec3">Swipe</a>
-        <a href = "mockup-options/tabular.html"class="eight wide column" id="sec4">Tabular</a>
-        <a href = "mockup.html"class="eight wide column" id="sec5">Original</a>
-        <a href = "mockup.html" class="eight wide column" id="sec6">Other</a>
+        <a href = "mockup-options/tap.html" class="eight wide column" id="sec1"> <div class="verticalalign">TAP</div></a>
+        <a href = "mockup-options/accordion.html"class="eight wide column" id="sec2"> <div class="verticalalign">ACCORDION</div></a>
+        <a href = "mockup-options/swipe_v2.html"class="eight wide column" id="sec3"><div class="verticalalign">SWIPE</div></a>
+        <a href = "mockup-options/tabular.html"class="eight wide column" id="sec4"><div class="verticalalign">TABULAR</div></a>
+        <a href = "mockup.html"class="eight wide column" id="sec5"><div class="verticalalign">ORIGINAL</div></a>
+        <a href = "mockup.html" class="eight wide column" id="sec6"><div class="verticalalign">OTHER  </div></a>
     </div>    
 
 </body>
