March 1: Updated index.html. Attempting to add photo below hyperlink text in references.html

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -43,28 +43,28 @@
          <div class="row">
           <a class="six wide column" href="references.html" id="YRL"> <div class="verticalalign"> YOUNG RESEARCH LIBRARY</div></a>
           <div class="four wide column">
-            <img src="../img/Statsform_Stock_Photos/powellnight.jpg">
+            <img class ="img-responsive" src="../img/Statsform_Stock_Photos/powellnight.jpg">
         </div>
         <a class="six wide column" href="references.html" id="BL"> <div class="verticalalign"> BIOMEDICAL LIBRARY </div> </a>
     </div>
 
     <div class="row">
-        <div class="five wide column"> <div align="left">
-           <img src="../img/Statsform_Stock_Photos/PowelLibrary.jpg"></div>
+        <div class="four wide column"> <div align="left">
+           <img class ="img-responsive" src="../img/Statsform_Stock_Photos/powellstudent.jpg"></div>
        </div>
-       <a class="eight wide column" href="references.html" id = "POWELL"> <div class="verticalalign">POWELL LIBRARY</div></a> 
-       <div class="three wide column">
-        <img src="../img/Statsform_Stock_Photos/UC_Los_Angeles-055.jpg"></div>
+       <a class="seven wide column" href="references.html" id = "POWELL"> <div class="verticalalign">POWELL LIBRARY</div></a> 
+       <div class="five wide column">
+        <img class ="img-responsive" src="../img/Statsform_Stock_Photos/clicc.jpg"></div>
     </div>
 
 
     <div class="row">
         <div class="four wide column">
-            <img src="../img/Statsform_Stock_Photos/bruinbear.jpg">
+            <img class ="img-responsive" src="../img/Statsform_Stock_Photos/books.jpg">
         </div>
         <a class="four wide column" href="references.html" id="AL"><div class="verticalalign"> ARTS LIBRARY</div></a>
         <div class="four wide column">
-            <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
+            <img class ="img-responsive" src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.jpg">
         </div>
         <a class="four wide column" href="references.html" id="ML"><div class="verticalalign">MUSIC LIBRARY</div></a>
     </div>
