--- a/webapp/references.html
+++ b/webapp/references.html
@@ -39,14 +39,38 @@
     </div>
 
     <!-- Content -->
+
+
     <div class="ui equal width center aligned grid">
-        <a href = "mockup-options/tap.html" class="eight wide column" id="sec1"> <div class="verticalalign">TAP</div></a>
+
+<div class = "eight wide column" id="sec1"  >
+ <a href = "mockup-options/tap.html" > 
+    <div class="containerBox">
+    <div class="text-box">
+        <h4>TAP</h4>
+    </div>
+    <img src="../img/Statsform_Stock_Photos/powellnight.jpg"/>
+</div>
+</a>
+</div>
+
         <a href = "mockup-options/accordion.html"class="eight wide column" id="sec2"> <div class="verticalalign">ACCORDION</div></a>
         <a href = "mockup-options/swipe_v2.html"class="eight wide column" id="sec3"><div class="verticalalign">SWIPE</div></a>
         <a href = "mockup-options/tabular.html"class="eight wide column" id="sec4"><div class="verticalalign">TABULAR</div></a>
         <a href = "mockup.html"class="eight wide column" id="sec5"><div class="verticalalign">ORIGINAL</div></a>
         <a href = "mockup.html" class="eight wide column" id="sec6"><div class="verticalalign">OTHER  </div></a>
     </div>    
+
+
+<!-- <div class="containerBox">
+    <div class="text-box">
+        <h4>Your Text is responsive and centered</h4>
+    </div>
+    <img class="img-responsive" src="http://placehold.it/900x100"/>
+</div>
+ 
+ ** Attempted to create hyperlink photo with text on top. 3/1
+!-->
 
 </body>
 </html>
